--- a/essai.html
+++ b/essai.html
@@ -209,6 +209,9 @@
         color: white;
        }
 
+       .back{
+       }
+
 
     </style>
 
@@ -304,7 +307,6 @@
                 
                 <img class="far" src="foregroundRight.svg">
 
-                <img src="backgroundImages.svg">
 
             </div>
 
